--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,9 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: requirements-txt-fixer
-      - id: check-toml
       - id: check-case-conflict
-      - id: check-docstring-first
+  - repo: https://github.com/psf/black
+    rev: 23.3.0
+    hooks:
+    -   id: black-jupyter
+        name: Black - Python formatter
